# strawberrybear-tools

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  README_en.md  commitlint.config.ts  eslint.config.js  lint-staged.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.changeset/: another-test.md  config.json  first-release.md  fix-i18n.md  fresh-test.md  initial-release.md  patch-test.md  smooth-hounds-smash.md  style-fix.md  test-01-patch-web-vue.md  test-02-minor-web-react.md  test-03-major-cli.md  test-04-multi-packages.md  test-artifacts.md  test-dist-upload.md  test-final-flow.md  test-final-release.md  test-release-2.md  test-release-fix.md  universe-explorer-init.md
apps/infinity-nikki-player/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/infinity-nikki-player/src-tauri/capabilities/: default.json
apps/infinity-nikki-player/src-tauri/docs/: README.md
apps/infinity-nikki-player/src-tauri/docs/architecture/: README.md
apps/infinity-nikki-player/src-tauri/docs/commands/: README.md
apps/infinity-nikki-player/src-tauri/docs/guides/: README.md  menu-guide.md
apps/infinity-nikki-player/src-tauri/en.lproj/: InfoPlist.strings
apps/infinity-nikki-player/src-tauri/icons/: icon.icns
apps/infinity-nikki-player/src-tauri/midi/: 7m2.mid
apps/infinity-nikki-player/src-tauri/src/: lib.rs  main.rs  types.rs
apps/infinity-nikki-player/src-tauri/src/commands/: keyboard.rs  midi.rs  mod.rs  player.rs  settings.rs  templates.rs  window.rs
apps/infinity-nikki-player/src-tauri/src/keyboard/: driver.rs  mod.rs  simulator.rs  win_input.rs
apps/infinity-nikki-player/src-tauri/src/midi/: melody.rs  mod.rs  parser.rs
apps/infinity-nikki-player/src-tauri/templates/: 14keys.json  21keys.json  game-4rows.json  piano.json
apps/infinity-nikki-player/src-tauri/zh-Hans.lproj/: InfoPlist.strings
docs/: AGENT.md  CICD.md  CODE_COMMENTARY.md  I18N.md  PLAN.md  (+2 more)
(+192 files in other folders)
