[package]
name = "infinity-nikki-player"
version = "0.0.1"
edition = "2021"

[lib]
name = "infinity_nikki_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"
enigo = "0.3"
tokio = { version = "1", features = ["sync", "time", "rt"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-mcp-bridge = "0.10.0"

# Windows 驱动级键盘模拟
[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5"
check_elevation = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
